# Regex-to-dfa

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  README.md  dockerfile  run.sh  run_tests  test.sh
.github/workflows/: cmake-single-platform.yml
docs/html/: annotated.html  ast_8h.html  ast_8h__dep__incl.map  ast_8h__dep__incl.md5  ast_8h__incl.map  ast_8h__incl.md5  ast_8h_source.html  classNode-members.html  classNode.html  classNodeTest-members.html  classNodeTest.html  classNodeTest__coll__graph.map  classNodeTest__inherit__graph.md5  classRegexASTTree.html  classRegexASTTree__coll__graph.md5  classRegexASTTree__inherit__graph.map  classRegexTokenTest.html  classRegexTokenTest__coll__graph.map  classRegexTokenTest__inherit__graph.md5  classSyntaxTreeTest-members.html  classSyntaxTreeTest.html  classSyntaxTreeTest__coll__graph.map  classSyntaxTreeTest__coll__graph.md5  classSyntaxTreeTest__inherit__graph.map  classSyntaxTreeTest__inherit__graph.md5  classSyntax_1_1AbstractSyntaxTree-members.html  classSyntax_1_1AbstractSyntaxTree.html  classSyntax_1_1Node-members.html  classSyntax_1_1Node.html  classSyntax_1_1Node__coll__graph.map  classSyntax_1_1Node__coll__graph.md5  classSyntax_1_1SyntaxTree-members.html  classSyntax_1_1SyntaxTree.html  classSyntax_1_1Token-members.html  classSyntax_1_1Token.html  classes.html  classlex_1_1RegexToken-members.html  classlex_1_1RegexToken.html  classlex_1_1RegexToken__coll__graph.map  classlex_1_1RegexToken__coll__graph.md5  (+240 more)
docs/latex/: annotated.tex  ast_8h.tex  ast_8h__dep__incl.md5  ast_8h__incl.md5  classNode.tex  classNodeTest.tex  classNodeTest__coll__graph.md5  classRegexASTTree.tex  classRegexASTTree__coll__graph.md5  classRegexTokenTest.tex  classRegexTokenTest__inherit__graph.md5  classSyntaxTreeTest.tex  classSyntaxTreeTest__coll__graph.md5  classSyntaxTreeTest__inherit__graph.md5  classSyntax_1_1AbstractSyntaxTree.tex  classSyntax_1_1Node.tex  classSyntax_1_1Node__coll__graph.md5  classSyntax_1_1SyntaxTree.tex  classSyntax_1_1Token.tex  classlex_1_1RegexToken.tex  classlex_1_1RegexToken__inherit__graph.md5  classlex_1_1Token.tex  classlex_1_1TokenFactory.tex  classlex_1_1TokenLogger.tex  classlex_1_1TokenLogger__coll__graph.md5  classlex_1_1TokenObserver.tex  classlex_1_1TokenObserver__inherit__graph.md5  classlex_1_1Token__inherit__graph.md5  classlexer_1_1Lexer.tex  classlogger_1_1Logger.tex  (+100 more)
src/: main.cpp
tests/: AST.cpp  lexer.test.cpp  node_test.cpp  syntax_tree_test.cpp  token.cpp
(+79 files in other folders)
